--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Some silly changes from master
+	Adding a line
+	Adding trouble
 -->
 <head>
-	<title>Trouble in Master now</title>
+	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
