mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Adding a line
+	Some silly changes from master
 -->
 <head>
-	<title>A very respectful website</title>
+	<title>Trouble in Master now</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			just stuff for now,
+			not sure if we should replace or not	
 		</p>
 	</main>
 	<footer class="container">
