adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Adding a line
-	Adding trouble
 -->
 <head>
-	<title>A very respectful website</title>
+	<title>Ridiculous website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
