local: updating simple.html copyrigh notice

--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Mary Copas 2014</p>
+		<p>&copy; Quick change to this line Mary Copas 2014</p>
 	</footer>
 </body>
 </html>
