changes after git stash branch command

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2014 Git.Training
 -->
 <head>
-	<title>CRAZY website</title>
+	<title>NUTS & CRAZY website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
